# docs/swagger.json
@@ -436,7 +436,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/store.Post"
+                            "$ref": "#/definitions/main.MessageEnvelope"
                         }
                     },
                     "400": {
@@ -941,7 +941,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/store.Follower"
+                        "$ref": "#/definitions/store.FollowerModel"
                     }
                 }
             }
@@ -988,7 +988,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/store.PostWithMetadata"
+                        "$ref": "#/definitions/store.PostFeedItem"
                     }
                 }
             }
@@ -1108,7 +1108,7 @@
                 }
             }
         },
-        "store.Follower": {
+        "store.FollowerModel": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -1150,9 +1150,37 @@
                 "user": {
                     "$ref": "#/definitions/store.User"
                 },
-                "user_id": {
-                    "type": "integer",
-                    "example": 1
+                "version": {
+                    "type": "integer"
+                }
+            }
+        },
+        "store.PostFeedItem": {
+            "type": "object",
+            "properties": {
+                "comments_count": {
+                    "type": "integer"
+                },
+                "content": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                },
+                "user_summary": {
+                    "$ref": "#/definitions/store.UserSummary"
                 },
                 "version": {
                     "type": "integer"
@@ -1167,17 +1195,6 @@
                     "items": {
                         "$ref": "#/definitions/store.CommentWithUser"
                     }
-                },
-                "post_data": {
-                    "$ref": "#/definitions/store.Post"
-                }
-            }
-        },
-        "store.PostWithMetadata": {
-            "type": "object",
-            "properties": {
-                "comments_count": {
-                    "type": "integer"
                 },
                 "post_data": {
                     "$ref": "#/definitions/store.Post"
@@ -1201,6 +1218,17 @@
                     "type": "boolean"
                 },
                 "role_id": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "store.UserSummary": {
+            "type": "object",
+            "properties": {
+                "id": {
                     "type": "integer"
                 },
                 "username": {
